@@ -855,9 +855,6 @@ Channel.prototype.userJoin = function(user) {
     user.socket.emit("setMotd", this.motd);
     user.socket.emit("drinkCount", this.drinks);
 
-    // Send things that require special permission
-    this.sendRankStuff(user);
-
     this.logger.log("+++ " + user.ip + " joined");
     Logger.syslog.log(user.ip + " joined channel " + this.name);
 }
@@ -967,12 +964,6 @@ Channel.prototype.sendChatFilters = function(user) {
         }
         user.socket.emit("chatFilters", filts);
     }
-}
-
-Channel.prototype.sendRankStuff = function(user) {
-    this.sendBanlist(user);
-    this.sendChatFilters(user);
-    this.sendChannelRanks(user);
 }
 
 Channel.prototype.sendChannelRanks = function(user) {
@@ -1137,7 +1128,6 @@ Channel.prototype.broadcastUserUpdate = function(user) {
         meta: user.meta,
         profile: user.profile
     });
-    this.sendRankStuff(user);
 }
 
 Channel.prototype.broadcastPoll = function() {
@@ -2349,14 +2339,6 @@ Channel.prototype.changeLeader = function(name) {
     }
     if(name == "") {
         this.logger.log("*** Resuming autolead");
-        /*
-        if(this.playlist.current != null && !isLive(this.playlist.current.media.type)) {
-            this.playlist.current.media.paused = false;
-            this.time = new Date().getTime();
-            this.i = 0;
-            mediaUpdate(this, this.playlist.current.media.id);
-        }
-        */
         this.playlist.lead(true);
         return;
     }
