@@ -1,3 +1,6 @@
+Sat Oct 19 12:20 2013 CDT
+    * lib/channel.js: Remove some unnecessary packets
+
 Wed Oct 16 23:29 2013 CDT
     * www/assets/js/callbacks.js, www/channel.html,
       www/assets/css/ytsync.css: Make queuefail errors always show in
